# hackton-book

./: .gitignore  README.md  vercel.json
.specify/memory/: agent-context-claude.md  constitution.md
backend/: .env.example  .gitignore  chunker.py  cleanup.py  cohere_embeddings.py  config.py  content_extractor.py  content_fetcher.py  content_processor.py  embedding_generator.py  embedding_storage.py  embedding_tester.py  error_reporter.py  errors.py  failure_handler.py  html_parser.py  input_validator.py  logging_config.py  main.py  models.py  pipeline.py  pipeline_metrics.py  progress_tracker.py  pyproject.toml  qdrant_helper.py  requirements.txt  retry_handler.py  test_integration.py  test_website_accessibility.py  validators.py  website_validator.py
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/examples/: README.md
docs/module-1/: glossary.md  intro-to-ros2.md  nodes-topics-services.md  python-urdf.md
docs/module-2/: gazebo-physics-simulation.md  glossary.md  sensor-simulation.md  unity-interaction-model.md
docs/module-3/: glossary.md  integration.md  isaac-ros.md  isaac-sim.md  nav2-navigation.md  style-guide.md
docs/module-4/: README.md  capstone-autonomous-humanoid.md  glossary.md  llm-planning.md  vision-manipulation.md  vla-pipeline-summary.md  voice-to-action.md
docs/theme/: DocSidebar.js  DocSidebarItem.js  DocSidebarItems.js  Navbar.js  styles.module.css
specs/001-ros2-nervous-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digital-twin-sim/: data-model.md  plan.md  (+4 more)
(+80 files in other folders)
